--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="text">
                 <h1>
                     <span>работаем с 11:00 до 22:00</span>
-                    Лучшие бугреры
+                    Лучшие бургеры
                 </h1>
                 <p>Закажи наши фирменные бургеры или собери что-то своё, а&nbsp;наши&nbsp;курьеры&nbsp;доставят за&nbsp;30&nbsp;минут</p>
                 <a href="#">заказать</a>
